src/objects/Offer_Incentive_Group__c.object
<CustomObject>
    <description>Offer Incentive Group</description>
    <fields>
        <fullName>Max_Choice__c</fullName>
        <description>Out of the incentive choices, how many does the customer can choose from</description>
        <inlineHelpText>Out of the incentive choices, how many does the customer can choose from</inlineHelpText>
        <label>Max Choice</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Offer_Definition__c</fullName>
        <description>Which offer definition is this offer incentive group is associated with</description>
        <inlineHelpText>Which offer definition is this offer incentive group is associated with</inlineHelpText>
        <label>Offer Definition</label>
        <referenceTo>Offer_Definition__c</referenceTo>
        <relationshipLabel>Offer Incentive Group</relationshipLabel>
        <relationshipName>Offer_Incentive_Group</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Offer_Incentive_Group_Label__c</fullName>
        <description>A short label used internally for report and identification of the offer incentive group</description>
        <inlineHelpText>A short label used internally for report and identification of the offer incentive group</inlineHelpText>
        <label>Offer Incentive Group Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Offer Incentive Group</label>
    <nameField>
        <displayFormat>OIG-{0000000000}</displayFormat>
        <label>Offer Incentive Group Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offer Incentive Group</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>